crates/qoo-tui/src/view/snapshots/qoo_tui__view__form__tests__combobox_open_typed_ref.snap
---
source: crates/qoo-tui/src/view/form.rs
expression: s
---
                                                                
                                                                
                                                                
  ╭ ＋  Run · platform ───────────────────────────────────────╮  
  │                                                          │  
  │  ╭ target ────────────────────────────────────────────╮  │  
  │  │45                                  (new worktree) ▾│  │  
  │  ╰────────────────────────────────────────────────────╯  │  
  │  ╭────────────────────────────────────────────────────╮  │  
  │  │ feat-45                                            │  │  
  │  │ pr:45   ← use PR #45 (new worktree)                │  │  
  ╰──╰────────────────────────────────────────────────────╯──╯
