crates/qoo-tui/src/view/snapshots/qoo_tui__view__form__tests__form_autogrow.snap
---
source: crates/qoo-tui/src/view/form.rs
assertion_line: 808
expression: s
---
                                                                
                                                                
  ╭ ＋  Create Worktree · platform ───────────────────────────╮  
  │                                                          │  
  │  ╭ branch / worktree name ────────────────────────────╮  │  
  │  │                                                    │  │  
  │  ╰────────────────────────────────────────────────────╯  │  
  │                                                          │  
  │  ╭ model ─────────────────────────────────────────────╮  │  
  │  │opus                                               ▾│  │  
  │  ╰────────────────────────────────────────────────────╯  │  
  │                                                          │  
  │  ╭ prompt ────────────────────────────────────────────╮  │  
  │  │first line                                          │  │  
  │  │second line                                         │  │  
  │  │third line                                          │  │  
  │  │fourth line                                         │  │  
  │  │fifth line                                          │  │  
  │  ╰────────────────────────────────────────────────────╯  │  
  │                                                          │  
  │  [ Create ]  [ Cancel ]                                  │  
  │                                                          │  
  ╰──────────────────────────────────────────────────────────╯
