crates/qoo-tui/src/view/snapshots/qoo_tui__view__form__tests__form_create_worktree.snap
---
source: crates/qoo-tui/src/view/form.rs
assertion_line: 614
expression: s
---
                                                                
  ╭ ＋  Create Worktree · platform ───────────────────────────╮  
  │                                                          │  
  │  ╭ branch / worktree name ────────────────────────────╮  │  
  │  │                                                    │  │  
  │  ╰────────────────────────────────────────────────────╯  │  
  │                                                          │  
  │  ╭ model ─────────────────────────────────────────────╮  │  
  │  │opus                                               ▾│  │  
  │  ╰────────────────────────────────────────────────────╯  │  
  │                                                          │  
  │  ╭ prompt ────────────────────────────────────────────╮  │  
  │  │Redesign the dialogs                                │  │  
  │  │                                                    │  │  
  │  │                                                    │  │  
  │  ╰────────────────────────────────────────────────────╯  │  
  │                                                          │  
  │  [ Create ]  [ Cancel ]                                  │  
  │                                                          │  
  ╰──────────────────────────────────────────────────────────╯
