crates/qoo-tui/src/view/snapshots/qoo_tui__view__form__tests__form_switch_provider.snap
---
source: crates/qoo-tui/src/view/form.rs
assertion_line: 1269
expression: s
---
                                                                
  ╭ Switch provider ─────────────────────────────────────────╮  
  │                                                          │  
  │  ╭ provider ──────────────────────────────────────────╮  │  
  │  │claude                                             ▾│  │  
  │  ╰────────────────────────────────────────────────────╯  │  
  │                                                          │  
  │  [ Switch ]  [ Cancel ]                                  │  
  │                                                          │  
  ╰──────────────────────────────────────────────────────────╯
