crates/qoo-tui/src/view/snapshots/qoo_tui__view__form__tests__form_switch_provider_open.snap
---
source: crates/qoo-tui/src/view/form.rs
assertion_line: 1286
expression: s
---
                                                                
                                                                
                                                                
  ╭ Switch provider ─────────────────────────────────────────╮  
  │                                                          │  
  │  ╭ provider ──────────────────────────────────────────╮  │  
  │  │claude                                             ▾│  │  
  │  ╰────────────────────────────────────────────────────╯  │  
  │  ╭────────────────────────────────────────────────────╮  │  
  │  │ claude                                             │  │  
  │  │ grok                                               │  │  
  ╰──│ codex                                              │──╯  
     ╰────────────────────────────────────────────────────╯
